[package]
name 	= "gauntlet"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib 	   = { version = "5.5.1",  features = ["with_serde"] }
rapier3d   = { version = "0.29.0", features = ["simd-stable", "debug-render"] }
anyhow     = { version = "1.0"   }
rand       = { version = "0.9.2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"    }
typetag    = { version = "0.2.20" }
rfd        = { version = "0.15.4" }
hashbrown = "0.16"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }

[build-dependencies]
cmake 	= { version = "0.1"    }
bindgen = { version = "0.71.0" }

[profile.dev]
debug = 0

[profile.dev.package.rapier3d]
opt-level = 3

[profile.release]
# only for flamegraph testing.
debug 		  = true
lto 		  = true
codegen-units = 1
panic 		  = "abort"