[package]
name 	= "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib 	     = { version = "5.5.1",  features = ["with_serde"] 			        }
rapier3d     = { version = "0.29.0", features = ["simd-stable", "debug-render"] }
serde        = { version = "1.0",    features = ["derive"] 					    }
serde_json   = { version = "1.0"    }
typetag      = { version = "0.2.20" }
hashbrown    = { version = "0.16",   features = ["serde"] }
mimalloc     = { version = "0.1.48" }
anyhow       = { version = "1.0"    }
rand         = { version = "0.9.2"  }
rfd          = { version = "0.15.4" }
engine_macro = { path = "../engine_macro" }

[profile.dev]
debug = 0

[profile.release]
lto 		  = true
codegen-units = 1
panic 		  = "abort"